tests/hopix/typechecker/good/while.hopix
fun f (x : unit) : unit =
 while (true) { f (nothing) }