tests/hopix/typechecker/bad/while.hopix
fun f (x : unit) : unit =
 while (0) { f (nothing) }